# robotica-2025-2

./: README.md  plantilla_examen.mlx
diff_bringup/: CMakeLists.txt  package.xml
diff_bringup/launch/: diff_robot_simulation.launch.xml
diff_bringup/rviz/: diff_robot_gz_config.rviz
diff_description/: CMakeLists.txt  package.xml
diff_description/launch/: display_diff.launch.xml
diff_description/rviz/: display_diff_config.rviz
diff_description/urdf/: camera.xacro  lidar.xacro  material.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
node_topics_py/: package.xml  setup.cfg  setup.py
node_topics_py/node_topics_py/: mobile_control_py.py  mobile_test_py.py  my_node_py.py  plantilla copy.py  plantilla.py  pub_py.py  sub_counter_py.py
practicas/: Practica_1.ipynb  Practica_2.ipynb
scara_description/: CMakeLists.txt  package.xml
scorbot_bringup/: CMakeLists.txt  package.xml
scorbot_bringup/launch/: trajectory_controller_scorbot.launch.py
scorbot_bringup/src/: trajectory_test.py
scorbot_description/: CMakeLists.txt  package.xml
srv_act_pkg/omnidirectional_description/: CMakeLists.txt  package.xml
srv_act_pkg/omnidirectional_description/config/: omni_velocity_controller.yaml
srv_act_pkg/omnidirectional_description/launch/: display.launch.xml
srv_act_pkg/omnidirectional_description/rviz/: omnidirectional_rviz.rviz
srv_act_pkg/omnidirectional_description/urdf/: camera.xacro  imu.xacro  lidar.xacro  omni_controller.xacro  omnidirectional.urdf  omnidirectional_control.xacro  omnidirectional_gz_propierties.xacro  omnidirectional_urdf.xacro
(+19 files in other folders)
